--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <div class="line"></div>
 
-                <p class="content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                <p class="content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged, Lorem ipsum dolor sit amet consectetur, adipisicing elit..</p>
             </td>
             <td width="200px" bgcolor="gray">Sidebar</td>
             <td width="200px"></td>
